; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_user.c_xfrm_get_sa.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/net/xfrm/extr_xfrm_user.c_xfrm_get_sa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.nlmsghdr = type { i32 }
%struct.nlattr = type { i32 }
%struct.net = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.xfrm_usersa_id = type { i32 }
%struct.xfrm_state = type { i32 }
%struct.TYPE_4__ = type { i32 }

@ESRCH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.sk_buff*, %struct.nlmsghdr*, %struct.nlattr**)* @xfrm_get_sa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @xfrm_get_sa(%struct.sk_buff* %0, %struct.nlmsghdr* %1, %struct.nlattr** %2) #0 {
  %4 = alloca %struct.sk_buff*, align 8
  %5 = alloca %struct.nlmsghdr*, align 8
  %6 = alloca %struct.nlattr**, align 8
  %7 = alloca %struct.net*, align 8
  %8 = alloca %struct.xfrm_usersa_id*, align 8
  %9 = alloca %struct.xfrm_state*, align 8
  %10 = alloca %struct.sk_buff*, align 8
  %11 = alloca i32, align 4
  %12 = alloca %struct.TYPE_4__, align 4
  store %struct.sk_buff* %0, %struct.sk_buff** %4, align 8
  store %struct.nlmsghdr* %1, %struct.nlmsghdr** %5, align 8
  store %struct.nlattr** %2, %struct.nlattr*** %6, align 8
  %13 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %14 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call %struct.net* @sock_net(i32 %15)
  store %struct.net* %16, %struct.net** %7, align 8
  %17 = load %struct.nlmsghdr*, %struct.nlmsghdr** %5, align 8
  %18 = call %struct.xfrm_usersa_id* @nlmsg_data(%struct.nlmsghdr* %17)
  store %struct.xfrm_usersa_id* %18, %struct.xfrm_usersa_id** %8, align 8
  %19 = load i32, i32* @ESRCH, align 4
  %20 = sub nsw i32 0, %19
  store i32 %20, i32* %11, align 4
  %21 = load %struct.net*, %struct.net** %7, align 8
  %22 = load %struct.xfrm_usersa_id*, %struct.xfrm_usersa_id** %8, align 8
  %23 = load %struct.nlattr**, %struct.nlattr*** %6, align 8
  %24 = call %struct.xfrm_state* @xfrm_user_state_lookup(%struct.net* %21, %struct.xfrm_usersa_id* %22, %struct.nlattr** %23, i32* %11)
  store %struct.xfrm_state* %24, %struct.xfrm_state** %9, align 8
  %25 = load %struct.xfrm_state*, %struct.xfrm_state** %9, align 8
  %26 = icmp eq %struct.xfrm_state* %25, null
  br i1 %26, label %27, label %28

27:                                               ; preds = %3
  br label %56

28:                                               ; preds = %3
  %29 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %30 = load %struct.xfrm_state*, %struct.xfrm_state** %9, align 8
  %31 = load %struct.nlmsghdr*, %struct.nlmsghdr** %5, align 8
  %32 = getelementptr inbounds %struct.nlmsghdr, %struct.nlmsghdr* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call %struct.sk_buff* @xfrm_state_netlink(%struct.sk_buff* %29, %struct.xfrm_state* %30, i32 %33)
  store %struct.sk_buff* %34, %struct.sk_buff** %10, align 8
  %35 = load %struct.sk_buff*, %struct.sk_buff** %10, align 8
  %36 = call i64 @IS_ERR(%struct.sk_buff* %35)
  %37 = icmp ne i64 %36, 0
  br i1 %37, label %38, label %41

38:                                               ; preds = %28
  %39 = load %struct.sk_buff*, %struct.sk_buff** %10, align 8
  %40 = call i32 @PTR_ERR(%struct.sk_buff* %39)
  store i32 %40, i32* %11, align 4
  br label %53

41:                                               ; preds = %28
  %42 = load %struct.net*, %struct.net** %7, align 8
  %43 = getelementptr inbounds %struct.net, %struct.net* %42, i32 0, i32 0
  %44 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %43, i32 0, i32 0
  %45 = load i32, i32* %44, align 4
  %46 = load %struct.sk_buff*, %struct.sk_buff** %10, align 8
  %47 = load %struct.sk_buff*, %struct.sk_buff** %4, align 8
  %48 = call i32 @NETLINK_CB(%struct.sk_buff* %47)
  %49 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  store i32 %48, i32* %49, align 4
  %50 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %51 = load i32, i32* %50, align 4
  %52 = call i32 @nlmsg_unicast(i32 %45, %struct.sk_buff* %46, i32 %51)
  store i32 %52, i32* %11, align 4
  br label %53

53:                                               ; preds = %41, %38
  %54 = load %struct.xfrm_state*, %struct.xfrm_state** %9, align 8
  %55 = call i32 @xfrm_state_put(%struct.xfrm_state* %54)
  br label %56

56:                                               ; preds = %53, %27
  %57 = load i32, i32* %11, align 4
  ret i32 %57
}

declare dso_local %struct.net* @sock_net(i32) #1

declare dso_local %struct.xfrm_usersa_id* @nlmsg_data(%struct.nlmsghdr*) #1

declare dso_local %struct.xfrm_state* @xfrm_user_state_lookup(%struct.net*, %struct.xfrm_usersa_id*, %struct.nlattr**, i32*) #1

declare dso_local %struct.sk_buff* @xfrm_state_netlink(%struct.sk_buff*, %struct.xfrm_state*, i32) #1

declare dso_local i64 @IS_ERR(%struct.sk_buff*) #1

declare dso_local i32 @PTR_ERR(%struct.sk_buff*) #1

declare dso_local i32 @nlmsg_unicast(i32, %struct.sk_buff*, i32) #1

declare dso_local i32 @NETLINK_CB(%struct.sk_buff*) #1

declare dso_local i32 @xfrm_state_put(%struct.xfrm_state*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
